# GoogleAlertManager

./: .env.example  .gitignore  CLAUDE.md  Get觀察名單.py  README.md  cli.py  pyproject.toml  seed_auth.py
.github/workflows/: analyze.yml  fetch.yml  test.yml
config/: alerts.yaml  rss_urls.json
data/: scores.json
data/alerts/2026-03-04/: 2301.json  2303.json  2308.json  2317.json  2324.json  2330.json  2354.json  2356.json  2357.json  2376.json  2377.json  2379.json  2382.json  2412.json  2454.json  2458.json  2480.json  3014.json  3022.json  3034.json  3035.json  3045.json  3231.json  4938.json  6214.json  6231.json  6285.json  6669.json  6996.json  7722.json  7728.json  7734.json  7765.json  8299.json
data/reports/: 2026-03-07-summary.md  2026-03-08-summary.md  2026-03-09-summary.md  2026-03-10-summary.md  2026-03-11-summary.md  2026-03-12-summary.md  2026-03-13-summary.md  2026-03-14-summary.md  2026-03-15-summary.md  2026-03-17-summary.md  2026-03-18-summary.md  2026-03-19-summary.md  2026-03-20-summary.md  2026-03-21-summary.md  2026-03-22-summary.md  2026-03-24-summary.md  2026-03-25-summary.md  2026-03-26-summary.md  2026-03-27-summary.md  2026-03-28-summary.md  2026-03-29-summary.md  2026-03-30-summary.md  2026-03-31-summary.md  2026-04-01-summary.md  2026-04-02-summary.md  2026-04-03-summary.md  2026-04-04-summary.md
src/: config.py  scheduler.py
src/alerts/: fetcher.py  manager.py
src/analysis/: llm.py  stats.py
src/companies/: watchlist.py
src/storage/: json_store.py  markdown_writer.py  scores_store.py
tests/: test_llm.py
(+1991 files in other folders)
