[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-alert-manager"
version = "0.1.0"
description = "Manage Google Alerts, collect notifications, and extract conclusions via LLM"
requires-python = ">=3.11"
dependencies = [
    "google-alerts",
    "feedparser",
    "APScheduler>=3.10",
    "click",
    "pyyaml",
    "python-dotenv",
    "jinja2",
    "nltk",
    "llm",
]

[tool.uv.sources]
# 本地開發用 path；CI/Actions 用 git URL（自動選擇）
llm = { path = "../llm", editable = true }
# llm = { git = "https://github.com/wenchiehlee/llm.git" }

[project.scripts]
gam = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
